<resources>
    <string name="app_name">Qlique</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="continu">Continue</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="desc">your desc goes here</string>
    <string name="choose">Choose profile photo</string>
    <string name="upload">upload</string>
    <string name="interests">What are your interests?</string>
    <string name="recommendations">Get better event recommendations</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="city">city</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signup">signup</string>
    <string name="or">OR</string>
    <string name="login">login</string>
    <string-array name="hobbies_item">
        <item>Sport</item>
        <item>Initiative</item>
        <item>Business</item>
        <item>Fashion</item>
        <item>Social</item>
        <item>Entertainment</item>
        <item>Study</item>
        <item>Beauty and style</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Food</item>
        <item>Animals</item>
        <item>Talent</item>
        <item>Cars</item>
        <item>Love and dating</item>
        <item>Fitness and health</item>
        <item>Dance</item>
        <item>Outdoor activities</item>
        <item>Home and garden</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="description">Description</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="enter_a_new_password">Enter a new password here</string>
    <string name="google_maps_API_key">AIzaSyAEYg3k2hcWMyjGlv4PuUcgtKuZ2-syFHM</string>
    <string name="enter_address_city_or_zip_code">Enter Address, City or Zip Code</string>
    <string name="map">Map</string>
    <string name="pick_time">time</string>
    <string name="pick_date">date</string>
    <string name="info_btn">Search a location or click on a location in the map</string>
    <string name="please_choose_the_distance_of_the_events_shown_in_the_map">Please choose the distance of the events shown in the map</string>
    <string name="showHide">Show</string>
    <string name="there_are_no_registered_users_for_the_event_yet">There are no registered users for the event yet</string>
    <string name="change_password">change password</string>
    <string name="_0">0</string>
    <string name="events">Events</string>
    <string name="account_info">Account Info</string>
    <string name="gender">Gender</string>
    <string name="name">Name</string>
    <string name="back">back</string>
</resources>