<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginAndSignUp.SignupActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="370dp"
        android:layout_height="752dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/bck_sign_up"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_profile"
            android:layout_width="@dimen/toolbar_profile_width"
            android:layout_height="@dimen/toolbar_profile_width"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginBottom="@dimen/activity_padding"
            android:scaleType="centerInside"
            android:src="@drawable/baseline_account_circle_black_48"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="10dp" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_plus"
            android:layout_width="@dimen/ic_plus_width"
            android:layout_height="@dimen/ic_plus_width"
            android:layout_gravity="center"
            app:civ_shadow="true"
            app:civ_shadow_radius="1dp"
            tools:layout_editor_absoluteX="221dp"
            tools:layout_editor_absoluteY="58dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/fName_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                android:hint="@string/first_name"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/lName_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                android:hint="@string/last_name"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:textAlignment="textStart" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/email_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                android:hint="@string/email"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/pass_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                android:hint="@string/password"
                android:paddingLeft="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/city_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                android:hint="@string/city"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/Gender"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal"
            android:paddingVertical="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <RadioButton
                android:id="@+id/radioM"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:checked="true"
                android:includeFontPadding="true"
                android:paddingStart="10dp"
                android:paddingTop="20dp"
                android:paddingRight="40dp"
                android:paddingBottom="10dp"
                android:text="@string/male"
                android:textAlignment="center"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/radioF"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded"
                android:checked="false"
                android:includeFontPadding="true"
                android:paddingStart="10dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:text="@string/female"
                android:textAlignment="center"
                android:textSize="14sp" />
        </RadioGroup>

        <Button
            android:id="@+id/signup_btn"
            android:layout_width="311dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:includeFontPadding="true"
            android:paddingTop="10dp"
            android:text="@string/signup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="309dp"
            android:layout_height="44dp"
            app:cornerRadius="20dp"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:text="@string/login" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>