<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".LoginAndSignUp.HobbiesSelection">

    <TextView
        android:id="@+id/txtview2"
        android:layout_width="404dp"
        android:layout_height="44dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/recommendations"
        android:textColor="@color/bg_meta_container"
        android:textSize="18sp"
        android:paddingLeft="2dp"
        app:layout_constraintBottom_toTopOf="@+id/multiple_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtview"
        android:paddingStart="2dp" />


    <ListView
        android:listSelector="@drawable/custom_selector"
        android:id="@+id/multiple_list_view"
        android:layout_width="399dp"
        android:layout_height="401dp"
        android:gravity="center"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ListView>

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continu"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiple_list_view" />

    <TextView
        android:id="@+id/txtview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/interests"
        android:textColor="@color/bg_meta_container"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/multiple_list_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scrollView2"
        android:paddingStart="5dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>